Fix spacing on top of grid

--- a/assets/css/composantes/content-list.css
+++ b/assets/css/composantes/content-list.css
@@ -3,7 +3,7 @@
 	max-width: 100ch;
 }
 
-.content-list > * + article {
+.content-list > * + :is(article, div) {
 	margin-top: var(--spacing-thinner);
 }
 
